--- a/src/app/Components/navbar/navbar.component.scss
+++ b/src/app/Components/navbar/navbar.component.scss
@@ -118,7 +118,7 @@ $textColor: #A5B0C0;
             margin: 22px 0 0 0;
             width: 100%;
             .shopping-bag{
-                margin: 0 0 0 70px;
+                margin: 0 0 0 50%;
                 cursor: pointer;
             }
         }
